fix: vertical motion and overflow handling in DrawerPopup

--- a/docs/examples/assets/motion.less
+++ b/docs/examples/assets/motion.less
@@ -92,12 +92,12 @@
       transform: translateY(-100%);
 
       &-active {
-        transform: translateX(0);
+        transform: translateY(0);
       }
     }
 
     &-leave {
-      transform: translateX(0);
+      transform: translateY(0);
 
       &-active {
         transform: translateY(-100%) !important;
@@ -113,12 +113,12 @@
       transform: translateY(100%);
 
       &-active {
-        transform: translateX(0);
+        transform: translateY(0);
       }
     }
 
     &-leave {
-      transform: translateX(0);
+      transform: translateY(0);
 
       &-active {
         transform: translateY(100%) !important;
